Fixed contrasts issue with the skip links

--- a/src/sass/views/_allScreenViews.scss
+++ b/src/sass/views/_allScreenViews.scss
@@ -12,6 +12,12 @@
 	height: 22px;
 }
 
+.wb-slc {
+	a {
+		color: #FFF;
+	}
+}
+
 #wb-bar {
 	background: #000;
 	min-height: 2.6em;
